# stm32test

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: crc8.rs  lib.rs  onewire.rs  spincell.rs  stm32.rs  stm32_onewire.rs  usart.rs
