[package]
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
edition = "2021"
readme = "README.md"
name = "stm32test"
version = "0.1.0"

[dependencies]
cortex-m = "*"
panic-halt = "0.2.0"
cortex-m-rtic = "^1"
stm32f1xx-hal = { version = "^0.8", features = ["stm32f100", "medium", "rt"] }
pin-project = "*"
embedded-hal = "*"
nb = "*"
embedded-dma = "*"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev.package."*"]
opt-level = "z"
codegen-units = 1
